--- a/CrossoutLogViewer.GUI/Navigation/UserListPage.xaml
+++ b/CrossoutLogViewer.GUI/Navigation/UserListPage.xaml
@@ -29,7 +29,7 @@
             </StackPanel>
         </GroupBox>
         <UserControls:UserDataGrid x:Name="UserListViewUsers"
-                                   OpenViewModelDoubleClick="UserOpenUserDoubleClick"
+                                   OpenViewModelDoubleClick="UserOpenUserClick"
                                    SelectionChanged="UserSelectUser"
                                    SelectedIndex="0"
                                    Grid.Row="2" />
