--- a/CrossoutLogViewer.GUI/Controls/MapsControl.xaml
+++ b/CrossoutLogViewer.GUI/Controls/MapsControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CrossoutLogView.GUI.Controls.MapsView"
+﻿<UserControl x:Class="CrossoutLogView.GUI.Controls.MapsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,35 +16,49 @@
                      SelectionChanged="ListBoxMaps_SelectionChanged">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock>
-                            <Run Text="{Binding Name, Mode=OneWay}" />
-                            <Run Text="•" />
-                            <Run Text="{Binding GamesPlayed}" />
+                        <TextBlock Margin="4"
+                                   VerticalAlignment="Center">
+                        <Run Text="{Binding Name, Mode=OneWay}" />
+                        <Run Text="•" />
+                        <Run Text="{Binding GamesPlayed}" />
                         </TextBlock>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
         </GroupBox>
-        <Grid Grid.Column="2">
-            <local:UserOverview x:Name="UserOverview" />
+        <Image x:Name="MapBackgroundImage"
+               Stretch="UniformToFill"
+               RenderOptions.BitmapScalingMode="NearestNeighbor"
+               RenderOptions.EdgeMode="Aliased"
+               MouseUp="OpenMapImageClick"
+               Grid.Row="1" />
+        <Grid Grid.Column="2"
+              Grid.RowSpan="2">
+            <local:UserOverview x:Name="UserOverview"
+                                Background="Transparent"/>
             <GroupBox Header="Games"
                       Style="{DynamicResource GroupBox}"
-                      Grid.Row="1">
+                      Grid.Row="1"
+                      Grid.ColumnSpan="2">
                 <Grid>
                     <local:GameListFilter x:Name="GameListFilter"
                                           FilterChanged="GameListFilter_FilterChanged"
-                                          Grid.Row="1" />
+                                          HorizontalAlignment="Stretch"/>
                     <Button Content="Open Users"
-                            Style="{DynamicResource MahApps.Styles.Button}"
+                            Style="{DynamicResource MahApps.Styles.Button.Flat}"
                             Click="OpenUsersClick"
                             VerticalAlignment="Center"
-                            HorizontalAlignment="Right"
-                            Margin="0,0,5,0"
-                            RenderTransformOrigin="0.056,0.463" />
+                            HorizontalAlignment="Center"
+                            Grid.Column="1"/>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="95" />
+                    </Grid.ColumnDefinitions>
                 </Grid>
             </GroupBox>
             <local:PlayerGamesDataGrid x:Name="PlayerGamesDataGrid"
-                                       Grid.Row="2" />
+                                       Grid.Row="2"
+                                       Grid.ColumnSpan="2" />
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
@@ -52,11 +66,16 @@
             </Grid.RowDefinitions>
         </Grid>
         <GridSplitter Style="{DynamicResource MahApps.Styles.GridSplitter}"
-                      Grid.Column="1" />
+                      Grid.Column="1"
+                      Grid.RowSpan="2"/>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="170" MaxWidth="250" />
             <ColumnDefinition Width="5" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="{Binding ElementName=ListBoxMaps, Path=ActualWidth}" />
+        </Grid.RowDefinitions>
     </Grid>
 </UserControl>
