--- a/CrossoutLogViewer.GUI/NavigationWindow.xaml
+++ b/CrossoutLogViewer.GUI/NavigationWindow.xaml
@@ -16,7 +16,8 @@
                       GlowBrush="{DynamicResource AccentBaseColorBrush}"
                       BorderThickness="1"
                       ResizeMode="CanResizeWithGrip"
-                      WindowStartupLocation="CenterScreen">
+                      WindowStartupLocation="CenterOwner"
+                      Loaded="OnLoaded">
     <Window.Resources>
         <ResourceDictionary>
             <Style TargetType="{x:Type Controls:WindowButtonCommands}"
@@ -36,26 +37,6 @@
                                 Value="{StaticResource CustomDarkMetroWindowButtonStyle}" />
                         <Setter Property="DarkCloseButtonStyle"
                                 Value="{StaticResource CustomDarkMetroWindowButtonStyle}" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <Style x:Key="MetroWindowTitlebarColorStyle"
-                   TargetType="{x:Type Controls:MetroWindow}"
-                   BasedOn="{StaticResource {x:Type Controls:MetroWindow}}">
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding ColorWindowTitlebar}"
-                                 Value="False">
-                        <Setter Property="WindowTitleBrush"
-                                Value="{DynamicResource MahApps.Brushes.ThemeBackground}" />
-                        <Setter Property="TitleForeground"
-                                Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
-                    </DataTrigger>
-                    <DataTrigger Binding="{Binding ColorWindowTitlebar}"
-                                 Value="True">
-                        <Setter Property="WindowTitleBrush"
-                                Value="{DynamicResource MahApps.Brushes.Accent}" />
-                        <Setter Property="TitleForeground"
-                                Value="{DynamicResource MahApps.Brushes.ThemeBackground}" />
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
