--- a/CrossoutLogViewer.GUI/Controls/UserGamesControl.xaml
+++ b/CrossoutLogViewer.GUI/Controls/UserGamesControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CrossoutLogView.GUI.Controls.UserGamesView"
+﻿<UserControl x:Class="CrossoutLogView.GUI.Controls.UserGamesControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
